--- a/SimpleShooter/Config/DefaultEngine.ini
+++ b/SimpleShooter/Config/DefaultEngine.ini
@@ -13,16 +13,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Sandbox.Sandbox
-LocalMapOptions=
-TransitionMap=None
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-FourPlayerSplitscreenLayout=Grid
-bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Sandbox.Sandbox
-ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/BP_ShooterGameMode.BP_ShooterGameMode_C
-GlobalDefaultServerGameMode=None
+GlobalDefaultGameMode=/Game/BP_GameModeBase.BP_GameModeBase_C
 
